[gd_scene load_steps=40 format=2]

[ext_resource path="res://assets/mail(4).png" type="Texture" id=1]
[ext_resource path="res://HOUSE/houseEnemies/petDog/petDogEnemy.gd" type="Script" id=2]
[ext_resource path="res://assets/runmail(1).png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 1 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 1 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 1 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 1 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 1 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 1 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 1 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 3 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 3 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 3 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 3 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 3 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 3 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 3 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 3 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 3 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 3 )
region = Rect2( 192, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 3 )
region = Rect2( 0, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 3 )
region = Rect2( 64, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 3 )
region = Rect2( 128, 256, 64, 64 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ) ],
"loop": false,
"name": "alert",
"speed": 10.0
}, {
"frames": [ SubResource( 47 ) ],
"loop": false,
"name": "default",
"speed": 0.0
}, {
"frames": [ SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ) ],
"loop": true,
"name": "run",
"speed": 20.0
} ]

[sub_resource type="CapsuleShape2D" id=32]
radius = 27.0
height = 34.0

[node name="petDogEnemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Anim" type="AnimatedSprite" parent="."]
position = Vector2( -6, -7 )
frames = SubResource( 16 )
animation = "alert"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 19, 9 )
shape = SubResource( 32 )

[node name="alerting" type="Timer" parent="."]
wait_time = 0.55

[node name="dash_dur" type="Timer" parent="."]
wait_time = 0.5

[node name="dash_cd" type="Timer" parent="."]
wait_time = 1.5

[connection signal="timeout" from="alerting" to="." method="_on_alerting_timeout"]
[connection signal="timeout" from="dash_dur" to="." method="_on_dash_dur_timeout"]
[connection signal="timeout" from="dash_cd" to="." method="_on_dash_cd_timeout"]
